# FTBQLocalizationTools

./: .gitignore  LICENSE  README.en.md  README.md  config.json  config_example.py  download.py  global_var.py  main.py  pyproject.toml  requirements.txt  我的术语库.txt
func/: __init__.py  back_fill.py  base.py  generate_lang.py  lang_translate.py  quest_translate.py  regular_translate.py  snbtlib_translate.py
